# nucleus

./: .gitignore  Cargo.toml  Makefile  README.md  config.yaml  coreml_convert.sh  llm-workspace  main.go
.github/workflows/: metrics.yml
ai/: config.yaml
ai/chat/: manager.go
ai/config/: config.go
ai/docs/: README.md  project-structure.md
ai/fileops/: fileops.go  fileops_test.go
ai/interactive/: interactive.go
core/: Cargo.toml
docs/: SUMMARY.md  book.toml
examples/: basic_chat.rs  coreml_basic.rs  coreml_chat.rs  detection.rs  rag_indexing.rs  read_file_line.rs  refactor_assistant.rs  structure_output.rs  terminal_rag_chat.rs  test_embedding_model.rs  write_file.rs
fileops/: fileops.go
nucleus/: Cargo.toml
nucleus-core/: Cargo.toml  RAG_INDEXING.md  RAG_SCALING.md  build.rs  config.yaml
nucleus-core/examples/: model_registry.rs  test_http_mcp.rs
nucleus-core/src/: config.rs  detection.rs  lib.rs  model_downloader.rs  ollama.rs  qdrant_helper.rs
nucleus-core/src/chat/: manager.rs  mod.rs  orchestrator.rs
nucleus-core/src/mcp/: mod.rs
nucleus-core/src/mcp/transport/: http.rs  mod.rs  stdio.rs
nucleus-core/src/metrics/: aggregator.rs  collector.rs  macos.rs  mod.rs  types.rs
nucleus-core/src/provider/: coreml.rs  coreml_wrapper.m  factory.rs  mistralrs.rs  mod.rs  ollama.rs  types.rs
nucleus-core/src/provider/coreml/: mod.rs  provider.rs  wrapper.m
nucleus-core/src/rag/: embedder.rs  indexer.rs  lancedb_store.rs  mod.rs  persistence.rs  qdrant_store.rs  store.rs  types.rs  utils.rs
nucleus-core/src/server/: handler.rs  mod.rs  transport.rs
nucleus-core/src/server/mcp/: mod.rs
nucleus-core/src/server/mcp/transports/: mod.rs  stdio.rs
nucleus-plugin/: Cargo.toml
nucleus-std/: Cargo.toml
pty/: Cargo.toml
pty/src/: main.rs
src/: lib.rs
(+31 files in other folders)
