[package]
name = "nucleus-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
futures.workspace = true
anyhow.workspace = true
nucleus-plugin = { path = "../nucleus-plugin" }
qdrant-client = { version = "1.11", default-features = false, features = ["serde"] }
lancedb = "0.22"
arrow-array = "56.2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.13"
